# CameraUtility

./: .gitignore  CMakeLists.txt  CameraArray.cpp  CameraArray.h  CameraUtil.cpp  CameraUtil.h  NPPJpegCoder.cpp  NPPJpegCoder.h  main.cpp  readme.md
cuda/: CameraUtilKernel.cu  CameraUtilKernel.h  NPPJpegCoderKernel.cu  NPPJpegCoderKernel.h
